# oracle

./: Build.toml  Cargo.toml  README.md  rusty-tags.vi
oracle/: aix.txt  alpine.txt  anarchy.txt  android.txt  antergos.txt  antix.txt  aosc.txt  apricity.txt  arch.txt  arch_xferience.txt  archbox.txt  archlabs.txt  archmerge.txt  artix.txt  arya.txt  bitrig.txt  blag.txt  blankon.txt  deepin.txt  desaos.txt  devuan.txt  dracos.txt  dragonflybsd.txt  elementary.txt  endless.txt  exherbo.txt  fedora.txt  freebsd.txt  frugalware.txt  funtoo.txt  galliumos.txt  gem.txt  gentoo.txt  gnewsense.txt  gobolinux.txt  guixsd.txt  haiku.txt  hyperbola.txt  irix.txt  kali.txt  (+19 more)
src/: distro.rs  download.rs  download_distros.rs  download_menu.rs  main.rs  os.rs  tests.rs  work.rs
