[package]
name = "oracle"
version = "0.1.0"
authors = ["FriedPandaFries <dkarrick2@gmail.com>"]
edition = "2018"
description = """\
A utility that aims to ease the process of \
downloading and installing different distros."""

[dependencies]
walkdir = "2.2.7"
select = "0.4.2"
termion = "1.5.1"
regex = "1.1.0"
dirs = "1.0.4"
reqwest = "0.9.5"
indicatif = "0.10.3"
failure = "0.1.3"
exitfailure = "0.5.1"

# The development profile, used for `cargo build`.
[profile.dev]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'

# The testing profile, used for `cargo test`.
[profile.test]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'

# The benchmarking profile, used for `cargo bench` and `cargo test --release`.
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'

# The documentation profile, used for `cargo doc`.
[profile.doc]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'

[package.metadata.deb]
maintainer = "David Karrick <dkarrick2@gmail.com>"
copyright = "2018, David Karrick <dkarrick2@gmail.com>"
extended-description = """\
A utility that aims to ease the process of \
downloading and installing different distros."""
depends = "$auto"
section = "utility"
priority = "optional"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
oracle = { path = "/usr/bin/oracle" }

[build]
rustflags = ["-C", "target-cpu=native"]
